--- a/templates/not_logged_in.html
+++ b/templates/not_logged_in.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Login required - Hornbill</title>
+    <title>Log in required - Hornbill</title>
 
     <link rel="stylesheet" href="/static/simple-grid.css" />
     <link
@@ -20,10 +20,10 @@
       <div class="row">
         <div class="col-2"></div>
         <div class="col-8">
-          <h3>Hornbill</h3>
-          <h1 style="margin-block-end: 0em;">Login Required</h1>
+          <h3 style="margin-block-end: 4px;">Hornbill</h3>
+          <h1 style="margin-block-end: 15px;">Login Required</h1>
           <a href="/login">
-            <button>Log in.</button>
+            <button style="">Log in.</button>
           </a>
         </div>
       </div>
