--- a/templates/home.html
+++ b/templates/home.html
@@ -25,7 +25,7 @@
             <button>Fetch Contacts.</button>
           </a>
           <br >
-          <a href="/getContacts#" >
+          <a href="/quarantined#" >
             <button style="margin-top: 15px;">View Quarantined People.</button>
           </a>
           <br >
