--- a/templates/ordersplaced.html
+++ b/templates/ordersplaced.html
@@ -20,9 +20,9 @@
         <div class="col-2"></div>
         <div class="col-8">
           <h3 style="margin-block-end: 4px;">
-            The following contacts were identified for
+            The following have received a
           </h3>
-          <h1 style="margin-block-end: 15px;">{{ id }}</h1>
+          <h1 style="margin-block-end: 15px;">Quarantine Order</h1>
           {% for i in contacts %}
           <details>
             <summary>{{ i['Full Name'] }}</summary>
@@ -35,8 +35,8 @@
             </p>
           </details>
           {% endfor %}
-          <a href="/issueqo?numbers=[{% for i in contacts %}'{{ i['Phone Number'] | replace('+','%2B') }}',{% endfor %}]&contacts={{ contacts }}">
-            <button style="margin-top: 15px;">Issue Quarantine Orders</button>
+          <a href="/issueqo?numbers=[{% for i in contacts %}'{{ i['Phone Number'] | replace('+','%2B') }}',{% endfor %}]">
+            <button style="margin-top: 15px;">View more</button>
           </a>
           <br>
           <a href="/">
