--- a/templates/ordersplaced.html
+++ b/templates/ordersplaced.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Contacts - Hornbill</title>
+    <title>Success - Hornbill</title>
 
     <link rel="stylesheet" href="/static/simple-grid.css" />
     <link
