--- a/templates/quarantined.html
+++ b/templates/quarantined.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Contacts - Hornbill</title>
+    <title>Quarantined- Hornbill</title>
 
     <link rel="stylesheet" href="/static/simple-grid.css" />
     <link
@@ -23,7 +23,7 @@
             The following are serving a
           </h3>
           <h1 style="margin-block-end: 15px;">Quarantine Order</h1>
-          {% for i in contacts %}
+          {% for i in people %}
           <details>
             <summary>{{ i['fields']['Full Name'] }}</summary>
             <p>
