--- a/templates/ordersplaced.html
+++ b/templates/ordersplaced.html
@@ -35,7 +35,7 @@
             </p>
           </details>
           {% endfor %}
-          <a href="/issueqo?numbers=[{% for i in contacts %}'{{ i['Phone Number'] | replace('+','%2B') }}',{% endfor %}]">
+          <a href="/quarantined#',{% endfor %}]">
             <button style="margin-top: 15px;">View more</button>
           </a>
           <br>
